# tinker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: eval_2asset_cvar.py  eval_2asset_improved.py  eval_2asset_jit.py  eval_2asset_lean.py  eval_gradient_mpc.py  eval_iqn_mpc_portfolio.py  eval_mini.py  eval_portfolio_simple.py  eval_standalone.py
tinker/: c51.py  cpo.py  ddpg.py  dqn.py  dreamerV3.py  log.py  norm.py  ppo.py  ppo_cont.py  ppo_continuous.py  ppo_discrete.py  var_cpo.py
tinker/acpo/: README.md  continuous.py  discrete.py
tinker/cpo/: README.md  continuous.py  discrete.py
tinker/cppo/: README.md  continuous.py  discrete.py
tinker/crpo/: README.md  continuous.py
tinker/dreamerV3/: README.md  continuous.py  discrete.py
tinker/env/: po.py  po_garch.py  portfolio_optimization.py  portfolio_optimization_garch.py
tinker/iqc/: README.md  continuous.py
tinker/iqn_mpc/: README.md  __init__.py  gradient_mpc.py  iqn.py  mpc.py
tinker/ppo/: README.md  continuous.py  discrete.py
tinker/ppo_l/: README.md  continuous.py  discrete.py
tinker/spidr/: ppo_l.py
tinker/stock_pred/: README.md  eval.py  run.py
tinker/thinker/: README.md  continuous.py
tinker/var_cpo/: README.md  continuous.py  discrete.py
