[project]
name = "tinker"
version = "0.1.0"
description = "Implementations of reinforcement learning algorithms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arch>=8.0.0",
    "chex>=0.1.91",
    "distrax>=0.1.7",
    "flashbax>=0.1.3",
    "flax>=0.12.0",
    "gymnax>=0.0.9",
    "jax>=0.8.0",
    "optax>=0.2.6",
    "polars>=1.34.0",
    "safenax>=0.4.3",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
]
